--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.2.0",
     "firebase": "^8.6.2",
     "firebase-admin": "^9.8.0",
     "next": "10.2.2",
