--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.2.0",
+    "axios": "^0.21.1",
     "firebase": "^8.6.2",
     "firebase-admin": "^9.8.0",
     "next": "10.2.2",
@@ -21,7 +22,7 @@
     "@types/react": "^17.0.6",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.2",
+    "tailwindcss": "^2.2.7",
     "typescript": "^4.2.4"
   }
 }
